--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trackify</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
